--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "directories": {
     "lib": "lib"
+  },
+  "dependencies": {
+    "inquirer": "^8.2.4",
+    "jest": "^29.5.0"
   }
 }
