--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "inquirer": "^8.2.5",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "logo": "^0.2.0",
+    "svg": "^0.1.0",
+    "xmlparser": "^0.1.0"
   }
 }
