--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Delia Young",
-  "license": "ISC",
+  "license": "MIT",
   "directories": {
     "lib": "lib"
   },
