--- a/package.json
+++ b/package.json
@@ -5,18 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Delia Young",
-  "license": "MIT",
+  "license": "ISC",
   "directories": {
     "lib": "lib"
   },
   "dependencies": {
     "inquirer": "^8.2.5",
-    "jest": "^29.5.0",
-    "logo": "^0.2.0",
-    "svg": "^0.1.0",
-    "xmlparser": "^0.1.0"
+    "jest": "^29.5.0"
   }
 }
